[ the green fields of france ] chord placement
issue #41

--- a/src/thegreenfieldsoffrance.tex
+++ b/src/thegreenfieldsoffrance.tex
@@ -9,80 +9,88 @@
 
     \label{thegreenfieldsoffrance}
 
-    \beginverse
-        Well \[G]how do you \[Em]do, young \[Am]Willie Mc\[Am/C]Bride,
-        Do you \[D7]mind if I sit here down \[G]by your \[C]grave\[G]side
-        And \[G]rest for a \[Em]while in the \[Am]warm summer \[Am/C],
-        I've been \[D7]working all day and I'm \[G]near-\[D]ly \[G]done?
+    \begin{center}
+        \gtab{G}{320033:210034}
+        \gtab{Em}{022000:023000}
+        \gtab{Am}{X02210:002310}
+        \gtab{Am/C}{X32210:042310:}
+        \gtab{D7}{XX0212:000213}
+        \gtab{C}{332010:342010}
+    \end{center}
 
-        I can \[G]see by your gr\[Em]avestone you were \[Am]only nine\[Am/C]teen,
-        When you \[D7]joined the great fallen in \[G]nineteen-s\[Dsus4]ix\[D]teen,
-        Well, I \[G]hope you died \[Em]well and I \[Am]hope you died \[Am/C]clean,
-        Or young \[D7]Willie McBride was it \[G]slow and \[D]ob\[G]scene.
+    \beginverse\memorize[verse]
+        Well h\[G]ow do you d\[Em]o, young W\[Am]illie McBr\[Am/C]ide,
+        Do you m\[D7]ind if I sit here down b\[G]y your gr\[C]aves\[G]ide
+        And r\[G]est for a wh\[Em]ile in the w\[Am]arm summer s\[Am/C]un,
+        I've been w\[D7]orking all day and I'm n\[G]ear-l\[D]y d\[G]one?
+        \brk
+        I can s\[G]ee by your gr\[Em]avestone you were \[Am]only ninet\[Am/C]een,
+        When you j\[D7]oined the great fallen in n\[G]ineteen-s\[Dsus4]ixteen \[D]
+        Well, I h\[G]ope you died w\[Em]ell and I h\[Am]ope you died cl\[Am/C]ean,
+        Or young W\[D7]illie McBride was it sl\[G]ow and \[D]obsc\[G]ene.
     \endverse
 
-    \beginchorus
-        Did they \[D]beat the drum slowly and \[C]play the fife \[G]lowly?
-        Did they \[D]sound the death march, as they \[C]lowered you \[G]down?
-        And did the \[C]band play the last post and \[D]chorus?
-        And did the \[G]pipes play the \[C]floweres of the \[D]Fo\[Dsus2]-\[D]-\[G]rest.
+    \beginchorus\memorize[chorus]
+        Did they b\[D]eat the drum slowly and pl\[C]ay the fife l\[G]owly?
+        Did they s\[D]ound the death march, as they l\[C]owered you d\[G]own?
+        And did the b\[C]and play the last post and ch\[D]orus?
+        And did the p\[G]ipes play the fl\[C]oweres of the F\[D]o\[Dsus2]-\[D]-r\[G]est.
     \endchorus
 
-    \beginverse
-        Did you ^leave a wife ^ or a ^sweetheart be^hind?
-        In ^some faithful heart is your ^memory ^en^shrined,
-        Al^though you died ^back in ^nineteen-six^teen,
-        In ^that faithful heart you are for^ever ^nine^teen.
-
-        Or ^are you a ^stranger without ^even a ^name,
-        En^closed and forever be^hind a glass ^ frame ^
-        In an ^old photo^graph torn and ^battered and ^stained
-        And ^fading to yellow in a ^brown lea^ther ^frame.
+    \beginverse\replay[verse]
+        Did you l^eave a wife ^ or a s^weetheart beh^ind?
+        In s^ome faithful heart is your m^emory ^enshr^ined,
+        Alth^ough you died b^ack in n^ineteen-sixt^een,
+        In th^at faithful heart you are for^ever n^inet^een.
+        \brk
+        Or ^are you a str^anger without ^even a n^ame,
+        Encl^osed and forever beh^ind a gla^ss frame ^
+        In an ^old photogr^aph torn and b^attered and st^ained
+        And f^ading to yellow in a br^own leath^er fr^ame.
     \endverse
 
-    \beginchorus
-        Did they \[D]beat the drum slowly and \[C]play the fife \[G]lowly?
-        Did they \[D]sound the death march, as they \[C]lowered you \[G]down?
-        And did the \[C]band play the last post and \[D]chorus?
-        And did the \[G]pipes play the \[C]floweres of the \[D]Fo\[Dsus2]-\[D]-\[G]rest.
+    \beginchorus\replay[chorus]
+        Did they b^eat the drum slowly and pl^ay the fife l^owly?
+        Did they s^ound the death march, as they l^owered you d^own?
+        And did the b^and play the last post and ch^orus?
+        And did the p^ipes play the fl^oweres of the F^o^-^-r^est.
     \endchorus
 
-    \beginverse
-        The ^sun now it sh^ines on the ^green fields of ^France.
-        There's a ^warm summer breeze that makes the ^red pup^pies ^dance.
-        And ^look how the ^sun shines from ^under the ^tree,
-        There's no ^gas, no barbed wire, no ^guns fir^ing ^now.
-
-        But ^here in this ^graveyard it's ^still "No man's ^ Land",
-        The ^countless white crosses lay ^mute und the ^sand. ^
-        To ^man's blind in^difference to ^his fellow ^man,
-        To a ^whole generation that were ^butchered ^and ^damned.
+    \beginverse\replay[verse]
+        The s^un now it shi^nes on the gr^een fields of Fr^ance.
+        There's a w^arm summer breeze that makes the r^ed puppi^es d^ance.
+        And l^ook how the s^un shines from ^under the tr^ee,
+        There's no g^as, no barbed wire, no g^uns fir^ing n^ow.
+        \brk
+        But h^ere in this gr^aveyard it's st^ill "No man's L^and",
+        The c^ountless white crosses lay m^ute und the ^ sand. ^
+        To m^an's blind ind^ifference to h^is fellow m^an,
+        To a wh^ole generation that were b^utchered ^and d^amned.
     \endverse
 
-    \beginchorus
-        Did they \[D]beat the drum slowly and \[C]play the fife \[G]lowly?
-        Did they \[D]sound the death march, as they \[C]lowered you \[G]down?
-        And did the \[C]band play the last post and \[D]chorus?
-        And did the \[G]pipes play the \[C]floweres of the \[D]Fo\[Dsus2]-\[D]-\[G]rest.
+    \beginchorus\replay[chorus]
+        Did they b^eat the drum slowly and pl^ay the fife l^owly?
+        Did they s^ound the death march, as they l^owered you d^own?
+        And did the b^and play the last post and ch^orus?
+        And did the p^ipes play the fl^oweres of the F^o^-^-r^est.
     \endchorus
 
-    \beginverse
-        Ah, young ^Willie Mc^Bride I can't ^help wonder ^why
-        Do ^all those who lay here know ^why they ^did ^die,
-        and ^did they be^lieve when they ^answered the ^call,
-        Did ^they really believe that this ^war would ^end ^wars?
-
-        Well, the ^sorrow, the ^suffering, the ^glory and the ^pain,
-        The ^killing and the dying were ^all done in^ vain ^.
-        For young ^Willie Mc^Bride it all ^happened a^gain,
-        and ^again, and again, and a^gain, and ^a^gain!
+    \beginverse\replay[verse]
+        Ah, young W^illie McBr^ide I can't h^elp wonder wh^y
+        Do ^all those who lay here kn^ow why they d^id d^ie,
+        and d^id they bel^ieve when they ^answered the c^all,
+        Did they r^eally believe that this w^ar would ^end w^ars?
+        \brk
+        Well, the s^orrow, the s^uffering, the gl^ory and the p^ain,
+        The k^illing and the dying were ^all done in ^ vain ^.
+        For young W^illie McBr^ide it all h^appened ag^ain,
+        and ag^ain, and again, and ag^ain, and ^ag^ain!
     \endverse
 
-    \beginchorus
-        \textnote{2x spielen}
-        Did they \[D]beat the drum slowly and \[C]play the fife \[G]lowly?
-        Did they \[D]sound the death march, as they \[C]lowered you \[G]down?
-        And did the \[C]band play the last post and \[D]chorus?
-        And did the \[G]pipes play the \[C]floweres of the \[D]Fo\[Dsus2]-\[D]-\[G]rest.
+    \beginchorus\replay[chorus]
+        \lrep Did they b^eat the drum slowly and pl^ay the fife l^owly?
+        Did they s^ound the death march, as they l^owered you d^own?
+        And did the b^and play the last post and ch^orus?
+        And did the p^ipes play the fl^oweres of the F^o^-^-r^est. \rrep \rep{2}
     \endchorus
 \endsong
