[ death to the drow ] chord placement
issue #20

--- a/src/deathtothedrow.tex
+++ b/src/deathtothedrow.tex
@@ -15,52 +15,52 @@
         \gtab{D7}{XX0212:000312}
     \end{center}
 
-    \beginverse
+    \beginverse\memorize[verse]
         \[G]Once we were farmers with no cares at \[C]all
-        But our \[G]lives were all \[C]changed when we \[D7]answered the \[G]call.
-        To de\[G]fend our homeland with all of our \[C]might
-        To \[G]stow any \[C]drow who were \[D7]out for a \[G]fight.
+        But our l\[G]ives were all ch\[C]anged when we \[D7]answered the c\[G]all.
+        To def\[G]end our homeland with all of our m\[C]ight
+        To st\[G]ow any dr\[C]ow who were \[D7]out for a f\[G]ight.
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, (Death to the drow) \[G] no, nay, never no \[C]more
-        Will we \[G]suffer drow \[C]bastards, no \[D7]never, no \[G]more.
+    \beginchorus\memorize[chorus]
+        And it's n\[D]o, nay, never, \echo{Death to the drow} \[G] no, nay, never no m\[C]ore
+        Will we s\[G]uffer drow b\[C]astards, no n\[D7]ever, no m\[G]ore.
     \endchorus
 
-    \beginverse
-        I said  fare-^well to my lassie, she begged me to ^stay
-        But my ^clan was a ^calling and ^I told her ^``nae''
-        I ^told her of my duty, that I had to kill ^drew
-        And she ^picked up a ^sword and said ^she would come ^too
+    \beginverse\replay[verse]
+        I said  fare-w^ell to my lassie, she begged me to st^ay
+        But my cl^an was a c^alling and ^I told her ``n^ae''
+        I t^old her of my duty, that I had to kill dr^ow
+        And she p^icked up a sw^ord and said sh^e would come t^oo
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, (Death to the drow) \[G] no, nay, never no \[C]more
-        Will we \[G]suffer drow \[C]bastards, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n^o, nay, never, \echo{Death to the drow} ^ no, nay, never no m^ore
+        Will we s^uffer drow b^astards, no n^ever, no m^ore.
     \endchorus
 
-    \beginverse
-        For ^all of the first week not a drow did we ^slay
-        But we ^heard of a ^battle the ^very next ^day
-        So we ^all donned our woad and we stepped to the ^fore
-        And there's ^three hundred ^dark elves who're ^breathing no ^more
+    \beginverse\replay[verse]
+        For ^all of the first week not a drow did we sl^ay
+        But we h^eard of a b^attle the v^ery next d^ay
+        So we ^all donned our woad and we stepped to the f^ore
+        And there's thr^ee hundred d^ark elves who're br^eathing no m^ore
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, (Death to the drow) \[G] no, nay, never no \[C]more
-        Will we \[G]suffer drow \[C]bastards, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n\[D]o, nay, never, \echo{Death to the drow} \[G] no, nay, never no m\[C]ore
+        Will we s\[G]uffer drow b\[C]astards, no n\[D7]ever, no m\[G]ore.
     \endchorus
 
-    \beginverse
-        ^Fled from our lands was the evil in ^black
-        So we ^went under^ground to find ^drow to att^ack
-        They ^lived in a world full of darkness and ^dread
-        But they ^don't live at ^all with an ^axe in their ^head
+    \beginverse\replay[verse]
+        Fl^ed from our lands was the evil in bl^ack
+        So we w^ent undergr^ound to find dr^ow to att^ack
+        They l^ived in a world full of darkness and dr^ead
+        But they d^on't live at ^all with an ^axe in their h^ead
     \endverse
 
-    \beginchorus
-        \lrep And it's \[D]no, nay, never, (Death to the drow) \[G] no, nay, never no \[C]more
-        Will we \[G]suffer drow \[C]bastards, no \[D7]never, no \[G]more. \rrep \rep{2}
+    \beginchorus\replay[chorus]
+        \lrep And it's n\[D]o, nay, never, \echo{Death to the drow} \[G] no, nay, never no m\[C]ore
+        Will we s\[G]uffer drow b\[C]astards, no n\[D7]ever, no m\[G]ore. \rrep \rep{2}
 
         \textnote{1\textsuperscript{st} time a.c.}
     \endchorus
