[ the wild rover ] chord placement
issue #16

--- a/src/thewildrover.tex
+++ b/src/thewildrover.tex
@@ -15,52 +15,52 @@
         \gtab{D7}{XX0212:000312}
     \end{center}
 
-    \beginverse
-        I've \[G]been a wild rover for many a \[C]year
-        And I \[G]spent all me \[C]money on \[D7]whiskey and \[G]beer.
-        But \[G]now I'm returning with gold in great \[C]store
-        And I'll \[G]never will \[C]play the wild \[D7]rover no \[G]more
+    \beginverse\memorize[verse]
+        I've b\[G]een a wild rover for many a y\[C]ear
+        And I sp\[G]ent all me m\[C]oney on wh\[D7]iskey and b\[G]eer.
+        But n\[G]ow I'm returning with gold in great st\[C]ore
+        And I'll n\[G]ever will pl\[C]ay the wild r\[D7]over no m\[G]ore
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the wild \[C]rover, no \[D7]never, no \[G]more.
+    \beginchorus\memorize[chorus]
+        And it's n\[D]o, nay, never, \[G] no, nay, never no m\[C]ore
+        Will I pl\[G]ay the wild r\[C]over, no n\[D7]ever, no m\[G]ore.
     \endchorus
 
-    \beginverse
-        I ^went to an alehouse I used to frequ^ent
-        And I ^told the land^lady me ^money was ^spent.
-        I ^asked her for credit, she answered me ``^Nay!''
-        ``Such a ^custom as ^yours I could ^have any ^day.''
+    \beginverse\replay[verse]
+        I w^ent to an alehouse I used to frequ^ent
+        And I t^old the landl^ady me m^oney was sp^ent.
+        I ^asked her for credit, she answered me ``N^ay!''
+        ``Such a c^ustom as y^ours I could h^ave any d^ay.''
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the wild \[C]rover, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the wild r^over, no n^ever, no m^ore.
     \endchorus
 
-    \beginverse
-        I ^took out me pocket ten sovereigns ^bright
-        And the ^landlady's ^eyes opened ^wide with de^light
-        She ^said: ``I have whiskeys and wines of the ^best!
-        And the ^words that I ^told you were ^only in ^jest!''
+    \beginverse\replay[verse]
+        I t^ook out me pocket ten sovereigns br^ight
+        And the l^andlady's ^eyes opened w^ide with del^ight
+        She s^aid: ``I have whiskeys and wines of the b^est!
+        And the w^ords that I t^old you were ^only in j^est!''
     \endverse
 
-    \beginchorus
-        And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the wild \[C]rover, no \[D7]never, no \[G]more.
+    \beginchorus\replay[chorus]
+        And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the wild r^over, no n^ever, no m^ore.
     \endchorus
 
-    \beginverse
-        I'll go ^home to my parents, confess what I've ^done
-        And ^ask them to ^pardon their ^prodigal ^son
-        And ^when they've caressed me as oftimes be^fore
-        I ^never will ^play the wild ^rover no ^more
+    \beginverse\replay[verse]
+        I'll go h^ome to my parents, confess what I've d^one
+        And ^ask them to p^ardon their pr^odigal s^on
+        And w^hen they've caressed me as oftimes bef^ore
+        I n^ever will pl^ay the wild r^over no m^ore
     \endverse
 
-    \beginchorus
-        \lrep And it's \[D]no, nay, never, \[G] no, nay, never no \[C]more
-        Will I \[G]play the wild \[C]rover, no \[D7]never, no \[G]more. \rrep \rep{2}
+    \beginchorus\replay[chorus]
+        \lrep And it's n^o, nay, never, ^ no, nay, never no m^ore
+        Will I pl^ay the wild r^over, no n^ever, no m^ore. \rrep \rep{2}
 
         \textnote{1\textsuperscript{st} time a.c.}
     \endchorus
