[ the rattlin' bog ] chord placement
issue #15

--- a/src/therattlinbog.tex
+++ b/src/therattlinbog.tex
@@ -15,116 +15,116 @@
         \gtab{D}{XX0232:0000132}
     \end{center}
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\memorize[chorus]
+        \[G]Oh, hoh, the r\[C]attlin' bog, the b\[G]og down in the v\[D]alley - o,
+        \[G]oh, hoh, the r\[C]attlin' bog, the b\[G]og down in the v\[D]alley - \[G]o.
     \endchorus
 
-    \beginverse\memorize
-        Well, \[G]in that bog there was a tree, a rare tree, a \[D]rattlin' tree
+    \beginverse\memorize[verse]
+        Well, \[G]in that bog there was a tree, a rare tree, a r\[D]attlin' tree
     \endverse
 
     \beginverse*
         A tree in the bog and the bog down in the valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        And ^on that tree there was a limb, a rare limb, a ^rattlin' limb.
+    \beginverse\replay[verse]
+        And ^on that tree there was a limb, a rare limb, a r^attlin' limb.
     \endverse
 
     \beginverse*
         A limb on the tree and the tree in the bog and the bog down in the vally - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        Well, ^on that limb there was a branch, a rare branch, a ^rattlin' branch.
+    \beginverse\replay[verse]
+        Well, ^on that limb there was a branch, a rare branch, a r^attlin' branch.
     \endverse
 
     \beginverse*
         A branch on the limb and the limb on the tree and the tree in the bog and the bog down in the valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        And ^on that branch there was a twig, a rare twig, a ^rattlin' twig.
+    \beginverse\replay[verse]
+        And ^on that branch there was a twig, a rare twig, a r^attlin' twig.
     \endverse
 
     \beginverse*
         A twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in the valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        Well, ^on that twig there was a nest, a rare nest, a ^rattlin' nest.
+    \beginverse\replay[verse]
+        Well, ^on that twig there was a nest, a rare nest, a r^attlin' nest.
     \endverse
 
     \beginverse*
         A nest on the twig and the twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in the valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        And ^on that nest there was an egg, a rare egg, a ^rattlin' egg.
+    \beginverse\replay[verse]
+        And ^on that nest there was an egg, a rare egg, a r^attlin' egg.
     \endverse
 
     \beginverse*
         An egg on the nest and the nest on the twig and the twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in they valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        Well, ^on the egg there was a bird, a rare bird, a ^rattlin' bird.
+    \beginverse\replay[verse]
+        Well, ^on the egg there was a bird, a rare bird, a r^attlin' bird.
     \endverse
 
     \beginverse*
         A bird on the egg and the egg on the nest and the nest on the twig and the twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in they valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
-        And ^on that bird there was a feather, a rare feather, a ^rattlin' feather.
+    \beginverse\replay[verse]
+        And ^on that bird there was a feather, a rare feather, a r^attlin' feather.
     \endverse
 
     \beginverse*
         A feather on the bird and the bird on the egg and the egg on the nest and the nest on the twig and the twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in they valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 
-    \beginverse
+    \beginverse\replay[verse]
         Well, ^on that feather there was a flea, a rare flea, a ^rattlin' flea.
     \endverse
 
@@ -132,8 +132,8 @@
         A flea on the feather and a feather on the bird and the bird on the egg and the egg on the nest and the nest on the twig and the twig on the branch and the branch on the limb and the limb on the tree and the tree in the bog and the bog down in they valley - o.
     \endverse
 
-    \beginchorus
-        \[G]Oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - o,
-        \[G]oh, hoh, the \[C]rattlin' bog, the \[G]bog down in the \[D]valley - \[G]o.
+    \beginchorus\replay[chorus]
+        ^Oh, hoh, the r^attlin' bog, the b^og down in the v^alley - o,
+        ^oh, hoh, the r^attlin' bog, the b^og down in the v^alley - ^o.
     \endchorus
 \endsong
