[ he's a pirate ] chords missing + placement
issue #24

--- a/src/hesapirate.tex
+++ b/src/hesapirate.tex
@@ -9,25 +9,36 @@
 
     \label{hesapirate}
 
-    \textbf{Note: this song is not yet finished!}
+    \capo{4}
 
-    \beginverse
-        He escaped from the Island our strong Captain Jack,
-        He bound turtles together with the hair of his back.
-        Left alone with a gun, to look death in the eye,
-        But RedBull gave him wings and he learnt how to fly.
+    \begin{center}
+        \gtab{Dm}{XX0231:000231}
+        \gtab{B&}{X13321:013421}
+        \gtab{Am}{X02210:002310}
+        \gtab{F}{133211:134211}
+        \gtab{C}{032010:032010}
+        \gtab{Cadd9}{032030:032040}
+        \gtab{Gm7}{353333:131111}
+        \gtab{AM7}{002120:002130}
+    \end{center}
+
+    \beginverse\memorize[verse]
+        He esc\[Dm]aped from the \[B&]Island our str\[Am]ong Captain J\[Dm]ack,
+        He bound t\[B&]urtles tog\[F]ether with the h\[C]air \[Cadd9]of h\[C]is b\[Dm]ack.
+        Left al\[Dm]one with a g\[B&]un, to look d\[Gm7]eath in the \[Dm]eye,
+        But RedB\[B&]ull gave him w\[Dm]ings and he l\[AM7]earnt how to fly.
     \endverse
 
-    \beginverse
-        So he travelled with the guy from the Lord of the Rings
-        To the Island of Tortuga where he had a few flings.
-        He drafted a crew to find the Isla de Muerta
-        With the blood of his bootstrap to get rid of the curse.
+    \beginverse\replay[verse]
+        So he tr^avelled with the g^uy from the L^ord of the R^ings
+        To the ^Island of Tort^uga where he h^ad ^a f^ew fl^ings.
+        He dr^afted a cr^ew to find the ^Isla de Mu^erta
+        With the bl^ood of his b^ootstrap to get r^id of the curse.
     \endverse
 
-    \beginchorus
-        \lrep Oh, yeah, he is a pirate
-        Woh-hoh, king of the seas \rrep \rep{2}
+    \beginchorus\memorize[chorus]
+        \lrep \[Dm]Oh, y\[B&]eah, h\[F]e is a p\[C]irate
+        W\[Gm7]oh-h\[Dm]oh, k\[AM7]ing \[Dm]of th\[AM7]e s\[Dm]eas \rrep \rep{2}
     \endchorus
 
     \beginverse*
@@ -37,9 +48,9 @@
         When your \[F]eyes are \[G5]blinded by \[Dm]day\[Am]-\[Dm]light
     \endverse
 
-    \beginchorus
-        \lrep Oh, yeah, he is a pirate
-        Woh-hoh, king of the seas \rrep \rep{2}
+    \beginchorus\replay[chorus]
+        \lrep ^Oh, y^eah, h^e is a p^irate
+        W^oh-h^oh, k^ing ^of th^e s^eas \rrep \rep{2}
     \endchorus
 \endsong
 
