--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -118,12 +118,15 @@
             %\input{../src/eineleicheimteich}                \sclearpage
             %\input{../src/ethikderfuesse}                   \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
-            %\input{../src/hesapirate}                       \sclearpage
+            %\input{../src/gossenabitur}                     \sclearpage
+            \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
             \input{../src/pippilangstrumpf}                 \sclearpage
+            %\input{../src/saufmichschoen}                   \sclearpage
             %\input{../src/seehilfe}                         \sclearpage
             %\input{../src/stillenacht-larp}                 \sclearpage
+            %\input{../src/superknasterbart}                 \sclearpage
             %\input{../src/trigardon}                        \sclearpage
             \input{../src/theenchanter}                     %\sclearpage
             %\input{../src/untotaufurlaub}
